Update Deep Learning in TensorFlow.ipynb

--- a/Deep Learning in TensorFlow.ipynb
+++ b/Deep Learning in TensorFlow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> Kaggle's Deep Learning in TensorFlow <center>\n",
+    "# Kaggle's Deep Learning in TensorFlow\n",
     "\n",
     "In this notebook there is a summary of the main concepts extracted from Kaggle's course on Deep Learning. Also, here we use datasets that are also used in that course."
    ]
